--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body style="background-color: black;">  
     
-        <button class="btn btn-primary btn-lg" type="submit"><a href="C:\Users\Student 13\Desktop\python\image.html">Click me</a></button>
+
+    <img src="images/screamer.jpg" alt="" class="center image-hidden">
+        <button class="btn btn-primary btn-lg" type="submit">Click me</button>
     
    
 
